--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Beverly Hills Business Statistics (2025)</title>
+	<title>Our Locations</title>
  
 <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
 <!-- Leaflet CSS -->
@@ -199,7 +199,7 @@
 	<h1>Our Locations</h1>
 
 	<div class="container" style="display:block;margin:0 auto;	text-align:center;width:940px">
-		<p style="width:1140px;text-align:center;">Holistic Growth Marketing provides expert SEO and digital marketing services across the United States. Click a pin on the interactive map below to learn more about our services in each city, or explore the list of locations.</p>
+		<p style="width:100%;text-align:center;">Holistic Growth Marketing provides expert SEO and digital marketing services across the United States. Click a pin on the interactive map below to learn more about our services in each city, or explore the list of locations.</p>
 		<div id="map"></div>
 		<div class="locations-grid">
 			<div class="location-card">
