--- a/index.html
+++ b/index.html
@@ -191,6 +191,74 @@
 				transform: translateY(0);
 			}
 		}
+		@media screen and (max-width: 1024px) {
+  .container {
+    width: 90% !important;
+    padding: 16px;
+  }
+
+  #map {
+    height: 400px;
+  }
+
+  .locations-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 100% !important;
+    padding: 12px;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+
+  p {
+    font-size: 15px;
+    line-height: 22px;
+  }
+
+  #map {
+    height: 300px;
+  }
+
+  .locations-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .cta-button {
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 24px;
+  }
+
+  .location-card {
+    padding: 16px;
+  }
+
+  .location-card h2 {
+    font-size: 18px;
+  }
+
+  .location-card p,
+  .location-card a {
+    font-size: 14px;
+  }
+
+  #map {
+    height: 250px;
+  }
+}
+
 	</style>
 </head>
 <body>
